[gd_scene load_steps=63 format=3 uid="uid://scmvwqnfs8pa"]

[ext_resource type="Texture2D" uid="uid://fuyrc4at53ht" path="res://101livesbasechar.png" id="1_bfcmr"]
[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_mf3vi"]
[ext_resource type="Texture2D" uid="uid://cb2yn7w1ouwqw" path="res://Animation Frames/jump/jump0000.png" id="3_qhwch"]
[ext_resource type="Texture2D" uid="uid://dkmj6oomuwiud" path="res://Animation Frames/jump/jump0002.png" id="5_nst0h"]
[ext_resource type="Texture2D" uid="uid://bxdwk5tuaku6j" path="res://Animation Frames/jump/jump0010.png" id="13_xx7lb"]
[ext_resource type="Texture2D" uid="uid://bqngfds63gokg" path="res://Animation Frames/jump/jump0011.png" id="14_ne4td"]
[ext_resource type="Texture2D" uid="uid://com6tsi0brup" path="res://Animation Frames/jump/jump0012.png" id="15_ctr1l"]
[ext_resource type="Texture2D" uid="uid://dngu1uf1qcqq4" path="res://Animation Frames/jump/jump0013.png" id="16_t0fvs"]
[ext_resource type="Texture2D" uid="uid://b422gbb5em14m" path="res://Animation Frames/jump/jump0014.png" id="17_gq2ib"]
[ext_resource type="Texture2D" uid="uid://c1oy74w8f6oau" path="res://Animation Frames/jump/jump0015.png" id="18_0wxty"]
[ext_resource type="Texture2D" uid="uid://dkd7wdll73kpq" path="res://Animation Frames/jump/jump0016.png" id="19_aj564"]
[ext_resource type="Texture2D" uid="uid://cuw7srs5fuhq5" path="res://Animation Frames/jump/jump0017.png" id="20_noguj"]
[ext_resource type="Texture2D" uid="uid://b5ldnv88cmduy" path="res://Animation Frames/jump/jump0018.png" id="21_d6i83"]
[ext_resource type="Texture2D" uid="uid://da4804qwmulii" path="res://Animation Frames/jump/jump0019.png" id="22_qf6iv"]
[ext_resource type="Texture2D" uid="uid://bw56kes6mnivs" path="res://Animation Frames/jump/jump0020.png" id="23_4oddx"]
[ext_resource type="Texture2D" uid="uid://dm5mlr6cjjq64" path="res://Animation Frames/jump/jump0021.png" id="24_mqm0e"]
[ext_resource type="Texture2D" uid="uid://cs8t2f114glwh" path="res://Animation Frames/jump/jump0022.png" id="25_i2bif"]
[ext_resource type="Texture2D" uid="uid://de4y71yq2b68f" path="res://Animation Frames/jump/jump0023.png" id="26_sogv2"]
[ext_resource type="Texture2D" uid="uid://dpin6nucey371" path="res://Animation Frames/jump/jump0024.png" id="27_mxbxh"]
[ext_resource type="Texture2D" uid="uid://bulddcqcy104o" path="res://Animation Frames/runanim/run0001.png" id="27_pwqsa"]
[ext_resource type="Texture2D" uid="uid://bjkney7u43qx5" path="res://Animation Frames/jump/jump0025.png" id="28_8bchk"]
[ext_resource type="Texture2D" uid="uid://f8qgfis1sp7a" path="res://Animation Frames/runanim/run0002.png" id="28_ahmcf"]
[ext_resource type="Texture2D" uid="uid://pei480uacylf" path="res://Animation Frames/jump/jump0026.png" id="29_4jlw3"]
[ext_resource type="Texture2D" uid="uid://bmn8mkp4x02be" path="res://Animation Frames/runanim/run0003.png" id="29_c7mj6"]
[ext_resource type="Texture2D" uid="uid://ckddy62tgbcfv" path="res://Animation Frames/runanim/run0004.png" id="30_lyesx"]
[ext_resource type="Texture2D" uid="uid://ba75tgvkeykob" path="res://Animation Frames/jump/jump0027.png" id="30_pr832"]
[ext_resource type="Texture2D" uid="uid://3d48f173bdyv" path="res://Animation Frames/jump/jump0028.png" id="31_aun7w"]
[ext_resource type="Texture2D" uid="uid://vj7jtwh320kq" path="res://Animation Frames/runanim/run0005.png" id="31_k0dgq"]
[ext_resource type="Texture2D" uid="uid://dnthc2j7rp7hq" path="res://Animation Frames/runanim/run0006.png" id="32_4c0yy"]
[ext_resource type="Texture2D" uid="uid://cr4el342ft704" path="res://Animation Frames/jump/jump0029.png" id="32_rugen"]
[ext_resource type="Texture2D" uid="uid://dfjqnm7ywyy45" path="res://Animation Frames/runanim/run0007.png" id="33_hal0t"]
[ext_resource type="Texture2D" uid="uid://conx7mx6p44ge" path="res://Animation Frames/jump/jump0030.png" id="33_j16mm"]
[ext_resource type="Texture2D" uid="uid://hdxr2crlji8e" path="res://Animation Frames/jump/jump0031.png" id="34_lbwy1"]
[ext_resource type="Texture2D" uid="uid://dbw5xyvd4qcrw" path="res://Animation Frames/runanim/run0008.png" id="34_yn3hn"]
[ext_resource type="Texture2D" uid="uid://duabmpnuup73u" path="res://Animation Frames/runanim/run0009.png" id="35_81020"]
[ext_resource type="Texture2D" uid="uid://dspqjd8b5swl4" path="res://Animation Frames/runanim/run0010.png" id="36_xompw"]
[ext_resource type="Texture2D" uid="uid://cc7lqe8khxacv" path="res://Animation Frames/runanim/run0011.png" id="37_erofy"]
[ext_resource type="Texture2D" uid="uid://bh50pibudvkfp" path="res://Animation Frames/runanim/run0012.png" id="38_u1rnu"]
[ext_resource type="Texture2D" uid="uid://hqwkcmo31ifq" path="res://Animation Frames/runanim/run0013.png" id="39_dhe2v"]
[ext_resource type="Texture2D" uid="uid://xgcgadg0rl26" path="res://Animation Frames/runanim/run0014.png" id="40_nm621"]
[ext_resource type="Texture2D" uid="uid://bvlquvskvjcux" path="res://Animation Frames/runanim/run0015.png" id="41_iq3ww"]
[ext_resource type="Texture2D" uid="uid://0f34ekqsjsi3" path="res://Animation Frames/runanim/run0016.png" id="42_1psau"]
[ext_resource type="Texture2D" uid="uid://cgcajovrs3xcn" path="res://Animation Frames/runanim/run0017.png" id="43_aojnb"]
[ext_resource type="Texture2D" uid="uid://cbxa7tmjsrl7v" path="res://Animation Frames/runanim/run0018.png" id="44_f1y1l"]
[ext_resource type="Texture2D" uid="uid://cq70346akh5pg" path="res://Animation Frames/runanim/run0019.png" id="45_svfwp"]
[ext_resource type="Texture2D" uid="uid://cglvvpvj1wsyq" path="res://Animation Frames/runanim/run0020.png" id="46_lns6o"]
[ext_resource type="Texture2D" uid="uid://b3aligmnnghy7" path="res://Animation Frames/runanim/run0021.png" id="47_gvqbg"]
[ext_resource type="Texture2D" uid="uid://oe4o4k2kgpel" path="res://Animation Frames/runanim/run0022.png" id="48_n2u7u"]
[ext_resource type="Texture2D" uid="uid://brni8olnhrtad" path="res://Animation Frames/runanim/run0023.png" id="49_koh0i"]
[ext_resource type="Texture2D" uid="uid://cyr88nxebwh11" path="res://Animation Frames/runanim/run0024.png" id="50_v20nj"]
[ext_resource type="Texture2D" uid="uid://cefvnjny84qet" path="res://Animation Frames/runanim/run0025.png" id="51_xg7pg"]
[ext_resource type="Texture2D" uid="uid://by32uuthqj71r" path="res://Animation Frames/runanim/run0026.png" id="52_qiq5u"]
[ext_resource type="Texture2D" uid="uid://cpx025eusmh2o" path="res://Animation Frames/runanim/run0027.png" id="53_u3v4d"]
[ext_resource type="Texture2D" uid="uid://e27e8nj52w2u" path="res://Animation Frames/runanim/run0028.png" id="54_steby"]
[ext_resource type="Texture2D" uid="uid://dhxfn3ds1wrjl" path="res://Animation Frames/runanim/run0029.png" id="55_ed2re"]
[ext_resource type="Texture2D" uid="uid://b2r8hwyyb888o" path="res://Animation Frames/runanim/run0030.png" id="56_x0tkr"]
[ext_resource type="Texture2D" uid="uid://dau0yoknv6mnh" path="res://Animation Frames/runanim/run0031.png" id="57_i8hq5"]
[ext_resource type="Texture2D" uid="uid://coqaymopk68i0" path="res://Animation Frames/runanim/run0032.png" id="58_er1r2"]
[ext_resource type="Texture2D" uid="uid://bjchl20gavhax" path="res://Animation Frames/runanim/run0033.png" id="59_q5yyu"]
[ext_resource type="AudioStream" uid="uid://cdea0pxs4vsiu" path="res://sounds/footstepn.mp3" id="60_iseu8"]
[ext_resource type="AudioStream" uid="uid://bj2jvsftsuleq" path="res://sounds/thud.mp3" id="61_pul4a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mr0gl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qhwch")
}, {
"duration": 1.0,
"texture": ExtResource("5_nst0h")
}, {
"duration": 1.0,
"texture": ExtResource("13_xx7lb")
}, {
"duration": 1.0,
"texture": ExtResource("14_ne4td")
}, {
"duration": 1.0,
"texture": ExtResource("15_ctr1l")
}, {
"duration": 1.0,
"texture": ExtResource("16_t0fvs")
}, {
"duration": 1.0,
"texture": ExtResource("17_gq2ib")
}, {
"duration": 1.0,
"texture": ExtResource("18_0wxty")
}, {
"duration": 1.0,
"texture": ExtResource("19_aj564")
}, {
"duration": 1.0,
"texture": ExtResource("20_noguj")
}, {
"duration": 1.0,
"texture": ExtResource("21_d6i83")
}, {
"duration": 1.0,
"texture": ExtResource("22_qf6iv")
}, {
"duration": 1.0,
"texture": ExtResource("23_4oddx")
}, {
"duration": 1.0,
"texture": ExtResource("24_mqm0e")
}, {
"duration": 1.0,
"texture": ExtResource("25_i2bif")
}, {
"duration": 1.0,
"texture": ExtResource("26_sogv2")
}, {
"duration": 1.0,
"texture": ExtResource("27_mxbxh")
}, {
"duration": 1.0,
"texture": ExtResource("28_8bchk")
}, {
"duration": 1.0,
"texture": ExtResource("29_4jlw3")
}, {
"duration": 1.0,
"texture": ExtResource("30_pr832")
}, {
"duration": 1.0,
"texture": ExtResource("31_aun7w")
}, {
"duration": 1.0,
"texture": ExtResource("32_rugen")
}, {
"duration": 1.0,
"texture": ExtResource("33_j16mm")
}, {
"duration": 1.0,
"texture": ExtResource("34_lbwy1")
}],
"loop": false,
"name": &"Jump",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_bfcmr")
}],
"loop": false,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_4jlw3")
}, {
"duration": 1.0,
"texture": ExtResource("30_pr832")
}, {
"duration": 1.0,
"texture": ExtResource("31_aun7w")
}, {
"duration": 1.0,
"texture": ExtResource("32_rugen")
}, {
"duration": 1.0,
"texture": ExtResource("33_j16mm")
}, {
"duration": 1.0,
"texture": ExtResource("34_lbwy1")
}],
"loop": false,
"name": &"impact fall",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_pwqsa")
}, {
"duration": 1.0,
"texture": ExtResource("28_ahmcf")
}, {
"duration": 1.0,
"texture": ExtResource("29_c7mj6")
}, {
"duration": 1.0,
"texture": ExtResource("30_lyesx")
}, {
"duration": 1.0,
"texture": ExtResource("31_k0dgq")
}, {
"duration": 1.0,
"texture": ExtResource("32_4c0yy")
}, {
"duration": 1.0,
"texture": ExtResource("33_hal0t")
}, {
"duration": 1.0,
"texture": ExtResource("34_yn3hn")
}, {
"duration": 1.0,
"texture": ExtResource("35_81020")
}, {
"duration": 1.0,
"texture": ExtResource("36_xompw")
}, {
"duration": 1.0,
"texture": ExtResource("37_erofy")
}, {
"duration": 1.0,
"texture": ExtResource("38_u1rnu")
}],
"loop": false,
"name": &"run start",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("45_svfwp")
}, {
"duration": 1.0,
"texture": ExtResource("31_k0dgq")
}, {
"duration": 1.0,
"texture": ExtResource("30_lyesx")
}, {
"duration": 1.0,
"texture": ExtResource("29_c7mj6")
}, {
"duration": 1.0,
"texture": ExtResource("28_ahmcf")
}, {
"duration": 1.0,
"texture": ExtResource("27_pwqsa")
}],
"loop": false,
"name": &"run stop",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_erofy")
}, {
"duration": 1.0,
"texture": ExtResource("38_u1rnu")
}, {
"duration": 1.0,
"texture": ExtResource("39_dhe2v")
}, {
"duration": 1.0,
"texture": ExtResource("40_nm621")
}, {
"duration": 1.0,
"texture": ExtResource("41_iq3ww")
}, {
"duration": 1.0,
"texture": ExtResource("42_1psau")
}, {
"duration": 1.0,
"texture": ExtResource("43_aojnb")
}, {
"duration": 1.0,
"texture": ExtResource("44_f1y1l")
}, {
"duration": 1.0,
"texture": ExtResource("45_svfwp")
}, {
"duration": 1.0,
"texture": ExtResource("46_lns6o")
}, {
"duration": 1.0,
"texture": ExtResource("47_gvqbg")
}, {
"duration": 1.0,
"texture": ExtResource("48_n2u7u")
}, {
"duration": 1.0,
"texture": ExtResource("49_koh0i")
}, {
"duration": 1.0,
"texture": ExtResource("50_v20nj")
}, {
"duration": 1.0,
"texture": ExtResource("51_xg7pg")
}, {
"duration": 1.0,
"texture": ExtResource("52_qiq5u")
}, {
"duration": 1.0,
"texture": ExtResource("53_u3v4d")
}, {
"duration": 1.0,
"texture": ExtResource("54_steby")
}, {
"duration": 1.0,
"texture": ExtResource("55_ed2re")
}, {
"duration": 1.0,
"texture": ExtResource("56_x0tkr")
}, {
"duration": 1.0,
"texture": ExtResource("57_i8hq5")
}, {
"duration": 1.0,
"texture": ExtResource("58_er1r2")
}, {
"duration": 1.0,
"texture": ExtResource("59_q5yyu")
}],
"loop": true,
"name": &"running",
"speed": 24.0
}]

[node name="Player" type="CharacterBody2D"]
floor_constant_speed = true
floor_max_angle = 1.53589
script = ExtResource("1_mf3vi")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(1.165, 1.165)
polygon = PackedVector2Array(0, -50, 3, -49, 6, -47, 8, -44, 8, -40, 6, -36, 3, -34, 3, -32, 10, -32, 12, -31, 14, -30, 16, -28, 18, -26, 19, -23, 19, -13, 19, 4, 18, 6, 16, 7, 14, 7, 12, 5, 12, 2, 12, -3, 10, -3, 10, 17, 10, 45, 9, 47, 6, 48, 4, 48, -7, 48, -9, 47, -10, 45, -10, 5, -10, -3, -12, -3, -12, 4, -13, 6, -14, 7, -17, 7, -18, 6, -19, 4, -19, -12, -19, -24, -17, -27, -15, -30, -12, -31, -9, -32, -3, -32, -3, -34, -6, -36, -7, -38, -8, -41, -8, -44, -7, -46, -5, -48, -3, -49)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-5.96046e-08, 2.98023e-08)
scale = Vector2(0.233, 0.233)
sprite_frames = SubResource("SpriteFrames_mr0gl")
animation = &"impact fall"

[node name="DebugLabel" type="Label" parent="."]
offset_left = 17.2
offset_top = -42.6
offset_right = 57.2
offset_bottom = -19.6
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Footsteps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("60_iseu8")
volume_db = -9.0

[node name="Thud" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("61_pul4a")
volume_db = -0.5

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
